[gd_scene load_steps=3 format=2]

[ext_resource path="res://police_car/roadblock.gd" type="Script" id=1]
[ext_resource path="res://police_car/police_car_roadblock.tscn" type="PackedScene" id=2]

[node name="roadblock" type="Node2D"]
position = Vector2( 0, -25.2356 )
script = ExtResource( 1 )

[node name="police_car_roadblock1" parent="." instance=ExtResource( 2 )]

[node name="police_car_roadblock2" parent="." instance=ExtResource( 2 )]

[node name="police_car_roadblock3" parent="." instance=ExtResource( 2 )]
[connection signal="collision" from="police_car_roadblock1" to="." method="_on_police_car_roadblock1_collision"]
[connection signal="collision" from="police_car_roadblock2" to="." method="_on_police_car_roadblock2_collision"]
[connection signal="collision" from="police_car_roadblock3" to="." method="_on_police_car_roadblock3_collision"]
